# Nyctus

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  eslint.config.js  package-lock.json  package.json  prettier.config.js  vitest.config.ts
.github/workflows/: auto-fix.yml  build-nyctus-base.yml  ci.yml
.husky/_/: husky.sh
nyctus-os/: Dockerfile
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: container.rs  lib.rs  main.rs  nyc.rs  pipeline.rs  preflight.rs
src/components/: ErrorBoundary.tsx  Toast.tsx
src/components/BuildMode/: BuildModeLayout.tsx  EnvGroupNode.tsx  NodeInspector.tsx  NycNode.test.tsx  NycNode.tsx  Toolbox.tsx
src/components/ExecuteMode/: ExecuteModeLayout.tsx
src/components/NavBar/: NavBar.tsx
src/components/SetupWizard/: SetupWizard.tsx
src/context/: ThemeContext.tsx
src/hooks/: useAutoSave.ts  useContainerManager.ts  usePipelineExecutor.ts  useTerminal.ts
src/lib/: demo.ts  schemas.ts  tauri-bridge.test.ts  tauri-bridge.ts  useToast.tsx
src/store/: useAppStore.test.ts  useAppStore.ts
src/store/slices/: deploySlice.ts  graphSlice.ts  projectSlice.ts  runtimeSlice.ts  uiSlice.ts
src/test/: setup.ts
src/types/: generated.ts  index.ts
